refactor for heroku

--- a/env/dev.env
+++ b/env/dev.env
@@ -1,6 +1,7 @@
 NODE_ENV=dev
 
-DB_HOST=mongodb://localhost:27017/dev
+//DB_HOST=mongodb://localhost:27017/dev
+DB_HOST=mongodb://writeuser123:writeuser123@ds119598.mlab.com:19598/nitishakalwadi-test
 
 JWT_SECRET=tHi$IsJwt$etRetFOrDEv
 JWT_EXPIRY=1d
