--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mocha": "~3.5.0"
   },
   "scripts": {
+    "start": "node app.js",
     "test": "mocha --timeout 10000"
   },
   "author": "Nitishkumar Akalwadi",
